# rust-calculator

./: Cargo.toml
benches/: my_benchmark.rs
src/: evaluable.rs  expression.rs  lib.rs  main.rs  parser.rs  token.rs
tests/: integration_test.rs
